Java Nio emulation (#101)
* remove me

* Fix pom.xml

* Fixes

* fix write events

* Fix write events and write bytebuffer write function

* Enable stast and tcp-metadata filters

* Reuse NaspSocketChannel.write(ByteBuffer) in NaspSocketChannel.write(ByteBuffer[], int, int)

* Implement various unimplemented functions including kill and closeChannel

* Fix consumer read error

* Various fixes

* compile nasp library for different platforms (#83)

* compile nasp library for differnt platforms

* wip

* wp

* Fix potential deadlock in Select() method

* small check fix

* fix AsyncWrite non-blocking behavior

* Use RWMutex to sync access to TCPListener.terminated and Connection.terminated field

* added os profiles to pom.xml

* Fix write causing bufferunderflow and overflow errors

* write multibuffer to connection

* Added more error logging (#85)

* Handle EOF properly like in java

* support more versions in turning off sendfile (#86)

* fix shade includes

* fix select timeout handling according to java doSelect (#87)

* Use RWMutex for writeEOFLock and readEOFLock (#88)

* fix NaspServerSocketChannel.accept (#89)

* fix possible EOF in AsyncRead (#90)

* fix EOF -1 in read

* Log error only if not eof related (#91)

* fix writableKeys handling

* use atomic instead of many locks (#92)

* Added more logging

* put selectedKeys into a Set to prevent duplications (#95)

* use one global eof

* fix non-blocking write

* fix writeChannel handling

* Fix write on java side and disallow calling start functions twice (#96)

* Fix write on java side and disallow calling start functions twice

* Add check for accept

* Fix panic on closed channel (#97)

* Fix localport and remote port getters (#98)

* Fix localport and remote port getters

* Add getlocalAddress function to NaspSocket

* io error handling updates (#99)

* Reenable nasp features

* Update linter to work with Mac di