@@ -8,38 +8,110 @@
     <artifactId>nio-tcp-java</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <profiles>
+        <profile>
+            <id>os-darwin</id>
+            <activation>
+                <property>
+                    <name>os.name</name>
+                    <value>Mac OS X</value>
+                </property>
+            </activation>
+
+            <properties>
+                <nasp.os>darwin</nasp.os>
+            </properties>
+        </profile>
+        <profile>
+            <id>os-linux</id>
+            <activation>
+                <property>
+                    <name>os.name</name>
+                    <value>Linux</value>
+                </property>
+            </activation>
+
+            <properties>
+                <nasp.os>linux</nasp.os>
+            </properties>
+        </profile>
+    </profiles>
+
     <properties>
-        <maven.compiler.source>19</maven.compiler.source>
-        <maven.compiler.target>19</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <repositories>
 <!--        <repository>-->
-<!--            <id>repo</id>-->
-<!--            <url>file://${project.basedir}/../../repo/</url>-->
+<!--            <id>github-nasp</id>-->
+<!--            <url>https://maven.pkg.github.com/cisco-open/nasp</url>-->
+<!--            <snapshots>-->
+<!--                <enabled>true</enabled>-->
+<!--            </snapshots>-->
 <!--        </repository>-->
-        <repository>
-            <id>github-nasp</id>
-            <url>https://maven.pkg.github.com/cisco-open/nasp</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
+            <repository>
+                <id>repo</id>
+                <url>file://${basedir}/../../repo</url>
+            </repository>
     </repositories>
     <dependencies>
 <!--        <dependency>-->
-<!--            <groupId>nasp</groupId>-->
+<!--            <groupId>com.cisco.nasp</groupId>-->
 <!--            <artifactId>nasp</artifactId>-->
-<!--            <version>0.0.0</version>-->
-<!--            <scope>system</scope>-->
-<!--            <systemPath>${basedir}/../../repo/nasp/nasp/0.0.0/nasp-0.0.0.jar</systemPath>-->
+<!--            <version>2.0-SNAPSHOT</version>-->
 <!--        </dependency>-->
         <dependency>
-            <groupId>com.cisco.nasp</groupId>
+            <groupId>nasp</groupId>
             <artifactId>nasp</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>0.0.0</version>
+            <classifier>${nasp.os}</classifier>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                    <compilerArgs>
+                        <arg>--add-exports</arg>
+                        <arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <artifactSet>
+                        <includes>
+                            <include>nasp:nasp:${nasp.os}</include>
+                        </includes>
+                    </artifactSet>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <distributionManagement>
+        <repository>
+            <id>github-nasp</id>
+            <name>GitHub Nasp Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/cisco-open/nasp</url>
+        </repository>
+    </distributionManagement>
 
 </project>
